--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/ClientInicio.xhtml</welcome-file>
+        <welcome-file>faces/AdminArtista.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
