--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/AdminDisco.xhtml</welcome-file>
+        <welcome-file>faces/AdminCancion.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
